--- a/vignettes/faq.Rmd
+++ b/vignettes/faq.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 ## 1. What's the difference between a multiple-membership model and a conventional multilevel model?
 
-In a conventional hierarchical multilevel model, each lower-level unit belongs to exactly one higher-level unit (e.g., students nested in schools). In a **multiple-membership model (MMMM)**, lower-level units can belong to multiple higher-level units simultaneously, or alternatively, higher-level outcomes can be influenced by multiple lower-level units.
+In a conventional hierarchical multilevel model, each lower-level unit belongs to exactly one higher-level unit (e.g., students nested in schools). In a *multiple-membership model (MMMM)*, lower-level units can belong to multiple higher-level units simultaneously, or alternatively, higher-level outcomes can be influenced by multiple lower-level units.
 
 For example:
 
@@ -27,9 +27,9 @@ The MMMM accounts for this complex membership structure by weighting the contrib
 
 ## 2. What's the difference between a conventional MMMM and the extended MMMM implemented in `bml`?
 
-The **conventional MMMM** (as implemented in MLwiN, brms, or other software) uses **fixed, pre-specified weights** to aggregate lower-level effects. For instance, you might use equal weights (1/n) or weights based on time spent in each context.
+The *conventional MMMM* (as implemented in MLwiN, brms, or other software) uses *fixed, pre-specified weights* to aggregate lower-level effects. For instance, you might use equal weights (1/n) or weights based on time spent in each context.
 
-The **extended MMMM** in `bml` allows you to:
+The *extended MMMM* in `bml` allows you to:
 
 1. **Parameterize the weight function:** Instead of fixing weights, you can specify a functional form for weights (e.g., `w ~ 1/n^exp(b*X)`) and estimate the parameters that determine how lower-level units are aggregated.
 
@@ -37,7 +37,7 @@ The **extended MMMM** in `bml` allows you to:
 
 3. **Endogenize weight matrices:** Rather than imposing spatial or network weights externally, let the data determine connection strengths as functions of covariates.
 
-This flexibility enables researchers to explicitly model the **micro-to-macro link** — how lower-level characteristics aggregate to produce higher-level outcomes.
+This flexibility enables researchers to explicitly model the *micro-to-macro link* --- how lower-level characteristics aggregate to produce higher-level outcomes.
 
 ## 3. When should I use `bml` instead of other multilevel modeling packages?
 
@@ -45,13 +45,11 @@ Use `bml` when:
 
 - **You have multiple-membership structures:** Higher-level outcomes depend on multiple lower-level units (e.g., coalitions composed of parties, teams composed of individuals, neighborhoods influenced by surrounding areas).
 
-- **You want to model the aggregation process:** Rather than assuming a fixed aggregation (e.g., simple average), you want to test and estimate how lower-level effects combine.
-
 - **You need flexible weight functions:** Your theory suggests weights should depend on covariates, group size, or other features, not be fixed in advance.
 
-- **You're studying micro-to-macro relationships:** Your research question focuses on how lower-level units jointly shape higher-level outcomes, rather than how higher-level contexts shape lower-level outcomes.
+- **You're studying aggregation processes / micro-to-macro relationships:** Your research question focuses on how lower-level units jointly shape higher-level outcomes, rather than how higher-level contexts shape lower-level outcomes. Rather than assuming a fixed aggregation (e.g., simple average), you want to test and estimate how lower-level effects combine.
 
-For standard hierarchical models without multiple membership, packages like `lme4`, `brms`, or `MCMCglmm` may be more efficient. For conventional MMMMs with fixed weights, `brms` or MLwiN are excellent alternatives.
+For standard hierarchical models without multiple membership, packages like `lme4`, `brms`, or `MCMCglmm` will be more efficient. For conventional MMMMs with fixed weights, `brms` or MLwiN are excellent alternatives.
 
 ## 4. What outcome types and distributions does `bml` support?
 
@@ -59,13 +57,11 @@ For standard hierarchical models without multiple membership, packages like `lme
 
 - **Continuous outcomes:** Gaussian (normal) regression
 - **Binary outcomes:** Logit (logistic) regression
-- **Categorical outcomes:** Conditional logit (multinomial logit) regression
 - **Survival/duration outcomes:**
   - Cox proportional hazards model
   - Weibull accelerated failure time (AFT) model
-  - Support for competing risks analysis
 
-You can also specify hierarchical random effects (`hm()` blocks) in addition to multiple-membership structures, allowing for complex cross-classified and nested designs.
+You can also specify hierarchical random effects (`hm()` blocks) in addition to multiple-membership structures, allowing for hierarchically nested and cross-classified designs.
 
 ## 5. How do I specify the weight function, and what are the `c` and `ar` parameters?
 
