--- a/vignettes/installation.Rmd
+++ b/vignettes/installation.Rmd
@@ -52,28 +52,13 @@ If you want to build vignettes locally during installation:
 remotes::install_github("benrosche/bml", build_vignettes = TRUE)
 ```
 
-## 3. Verify the installation
-
-```{r, eval = FALSE}
-library(bml)
-packageVersion("bml")
-
-# Optional: confirm that rjags is linked against JAGS
-rjags::jags.version()
-```
-
 ## Troubleshooting
 
-**`Error: (converted from warning) ...` while installing**
+- `Error: (converted from warning) ...` while installing. `{remotes}` treats an installation warning as an error on your machine. You can opt out:
 
-If `{remotes}` treats an installation warning as an error on your machine, you can opt out:
+  ```{r, eval = FALSE}
+  Sys.setenv(R_REMOTES_NO_ERRORS_FROM_WARNINGS = "true")
+  remotes::install_github("benrosche/bml")
+  ```
 
-```{r, eval = FALSE}
-Sys.setenv(R_REMOTES_NO_ERRORS_FROM_WARNINGS = "true")
-remotes::install_github("benrosche/bml")
-```
-
-**JAGS not found / `rjags` fails to load**
-
--   Make sure JAGS is installed (not just the R packages), then restart R.
--   On Windows, confirm you installed the 64-bit JAGS build if you are using 64-bit R.
+- JAGS not found / `rjags` fails to load: Make sure JAGS is installed (not just the R packages), then restart R. On Windows, confirm you installed the 64-bit JAGS build if you are using 64-bit R.
